--- a/deliverable2/README
+++ b/deliverable2/README
@@ -2,7 +2,7 @@ Hello! In order to run this solver, please execute the following code:
 
     python3 greedy.py
 
-Run this from directly within the deliverable2 directory in order to get correct results
+Run this from directly within current directory in order to get correct results
 
 Within the file, please feel free to change the following parameters as needed:
 path_to_inputs
